frontend/test/should_fail/retype_028.grg
using attrib_model_001;

rule r {
	z:Node;
	iterated {
		x:Node;
		alternative {
			Foo {
				u:Node;

				modify {
					y:NINT<z>;
				}
			}
			Bar {
				u:Node;

				modify {
					y:NINT<x>;
				}
			}
		}

		modify {
		}
	}

	modify {}
}

